--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -1,5 +1,63 @@
 <?xml version="1.0"?>
 <odoo>
+
+    <record id="estate_table" model="ir.ui.view">
+        <field name="name">estate.property.tree</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <tree string="Channel">
+                <field name="name"/>
+                <field name="postcode"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="date_availability"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="estate_item_form" model="ir.ui.view">
+        <field name="name">estate.property.form</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <form string="Real Estate Property">
+                <sheet>
+                    <h1 class="mb32">
+                        <field name="name" readonly="true" class="mb16"/>
+                    </h1>
+
+                    <group>
+                        <group>
+                            <field name="postcode" readonly="true"/>
+                            <field name="date_availability" readonly="true"/>
+                        </group>
+                        <group>
+                            <field name="expected_price" readonly="true"/>
+                            <field name="selling_price" readonly="true"/>
+                        </group>
+                    </group>
+
+                    <notebook>
+                        <page string="Description">
+                            <group>
+                                <field name="description" readonly="true"/>
+                                <field name="bedrooms" readonly="true"/>
+                                <field name="living_area" readonly="true"/>
+                                <field name="facades" readonly="true"/>
+                                <field name="garage" readonly="true"/>
+                                <field name="garden" readonly="true"/>
+                                <field name="garden_area" readonly="true"/>
+                                <field name="garden_orientation" readonly="true"/>
+                            </group>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+
     <record id="estate_model_action" model="ir.actions.act_window">
         <field name="name">Test action</field>
         <field name="res_model">estate.property</field>
