custom search was added

--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -57,6 +57,21 @@
         </field>
     </record>
 
+    <record id="estate_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Delivery Carrier">
+                <field name="name" string="Title" />
+                <field name="postcode"/>
+                <field name="expected_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="facades"/>
+            </search>
+        </field>
+    </record>
+
 
     <record id="estate_model_action" model="ir.actions.act_window">
         <field name="name">Test action</field>
