--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <odoo>
-    <menuitem id="estate_menu_root" name="Test">
-        <menuitem id="estate_first_level_menu" name="First Level">
-            <menuitem id="estate_model_menu_action" action="estate_model_action"/>
+    <menuitem id="estate_menu_root" name="Real Estate">
+        <menuitem id="estate_advertisements" name="Advertisements">
+            <menuitem id="estate_property_menu" action="estate_property_action"/>
+        </menuitem>
+        <menuitem id="estate_property_types" name="Settings">
+            <menuitem id="estate_property_types_menu" action="estate_property_types_action"/>
         </menuitem>
     </menuitem>
 </odoo>
