--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -73,8 +73,8 @@
     </record>
 
 
-    <record id="estate_model_action" model="ir.actions.act_window">
-        <field name="name">Test action</field>
+    <record id="estate_property_action" model="ir.actions.act_window">
+        <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form</field>
     </record>
