--- a/calendar_mandatory_people/views/calendar_views_extension.xml
+++ b/calendar_mandatory_people/views/calendar_views_extension.xml
@@ -14,4 +14,19 @@
             </xpath>
         </field>
     </record>
+
+    <record id="view_calendar_event_calendar_inherit" model="ir.ui.view">
+        <field name="name">calendar.event.form.inherit</field>
+        <field name="model">calendar.event</field>
+        <field name="inherit_id" ref="calendar.view_calendar_event_calendar"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_ids']" position="after">
+                        <field name="mandatory_partner_ids" widget="many2manyattendee"
+                            placeholder="Select mandatory attendees..."
+                            domain="[('type','!=','private')]"
+                            class="oe_inline o_calendar_attendees"
+                        />
+            </xpath>
+        </field>
+    </record>
 </odoo>
